--- a/views/elems/pgm.pug
+++ b/views/elems/pgm.pug
@@ -25,7 +25,7 @@
                     include ../svg/mic.svg
                 .pgmItemTime 10:05 - 10:20
                 .pgmItemContent
-                    .pgmItemTitle Диагностика для компании или продукта
+                    .pgmItemTitle Диагностика для&nbsp;компании или&nbsp;продукта
                     .pgmItemSubTitle Просто о сложном. Найти точку приложения усилий, чтобы фантомные боли в бизнесе прекратились. Если вы еще не начали революцию в своей компании и продукте, это может помочь и вам избежать ошибок.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
@@ -44,7 +44,7 @@
                     </svg>
                 .pgmItemTime 10:20 - 11:15
                 .pgmItemContent
-                    .pgmItemTitle От продукта к клиенту. Как найти баланс между прибылью и лояльностью?
+                    .pgmItemTitle От продукта к клиенту. Как найти баланс между прибылью и&nbsp;лояльностью?
                     //.pgmItemSubTitle
                     .pgmItemSpeakers
                         .pgmItemSpeaker
@@ -86,7 +86,7 @@
                 .pgmItemTime 11:15 - 11:45
                 .pgmItemContent
                     .pgmItemTitle Клиентские сегменты: опыт Сбера в адаптации продуктов и&nbsp;каналов
-                    .pgmItemSubTitle Как делать сервисы, которые понравятся 105&nbsp;миллионам клиентов: молодежи и пенсионерам, детям и&nbsp;их родителям, иностранцам, бюджетникам, людям с&nbsp;инвалидностью и другим? Расскажем, как Сбер подходит к сегментации розничных клиентов, и&nbsp;разберем, как адаптировать сервис под&nbsp;клиента на&nbsp;примере особенного сегмента&nbsp;&ndash;&nbsp;людей с&nbsp;инвалидностью.
+                    .pgmItemSubTitle Как делать сервисы, которые понравятся 105&nbsp;миллионам клиентов: молодежи и&nbsp;пенсионерам, детям и&nbsp;их&nbsp;родителям, иностранцам, бюджетникам, людям с&nbsp;инвалидностью и&nbsp;другим? Расскажем, как Сбер подходит к&nbsp;сегментации розничных клиентов, и&nbsp;разберем, как&nbsp;адаптировать сервис под&nbsp;клиента на&nbsp;примере особенного сегмента&nbsp;&ndash;&nbsp;людей с&nbsp;инвалидностью.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -120,7 +120,7 @@
 
                 .pgmItemTime 11:45 - 12:10
                 .pgmItemContent
-                    .pgmItemTitle От идеи до масштабного запуска и выручки за 1 год
+                    .pgmItemTitle От идеи до&nbsp;масштабного запуска и&nbsp;выручки за&nbsp;1&nbsp;год
                     //.pgmItemSubTitle В этом выступлении я расскажу, как мы:<br>- За один год построили полноценную CV&#8209;платформу;<br>- Выпустили линейку из трех продуктов, на&nbsp;которых сразу же начали зарабатывать;<br>- Нашли свою нишу, когда на рынке уже&nbsp;были конкуренты с 10-летним опытом;<br>- Создавали идеи продуктов и проверяли гипотезы с нулевым вложением в&nbsp;разработку
                     .pgmItemSpeakers
                         .pgmItemSpeaker
@@ -136,7 +136,7 @@
                     include ../svg/mic.svg
                 .pgmItemTime 12:10 - 12:35
                 .pgmItemContent
-                    .pgmItemTitle Как в рутине задач находить время на Disrupt
+                    .pgmItemTitle Как в&nbsp;рутине задач находить время на Disrupt
                     .pgmItemSubTitle На живом примере продукта trade-in недвижимости я расскажу, что помогает команде Домклика быстро проверять гипотезы и не бояться отвергать их, а&nbsp;также поделюсь секретами, как&nbsp;придумывать новые, подрывные решения и находить время на Disrupt.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
@@ -151,8 +151,8 @@
                     include ../svg/mic.svg
                 .pgmItemTime 12:35 - 13:05
                 .pgmItemContent
-                    .pgmItemTitle Как разработать успешную стратегию, которая поможет развивать продукт. И которую будет не стыдно показать =)
-                    .pgmItemSubTitle В своем докладе я расскажу, как&nbsp;построить успешную стратегию развития продукта, какие метрики использовать, как декомпозировать ее до&nbsp;задач и, самое главное, &mdash; как на&nbsp;нее влияет&nbsp;клиент.
+                    .pgmItemTitle Как разработать успешную стратегию, которая поможет развивать продукт. И которую будет не&nbsp;стыдно показать =)
+                    .pgmItemSubTitle В своем докладе я&nbsp;расскажу, как&nbsp;построить успешную стратегию развития продукта, какие метрики использовать, как декомпозировать ее до&nbsp;задач и, самое главное, &mdash; как на&nbsp;нее влияет&nbsp;клиент.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -181,7 +181,7 @@
                 .pgmItemTime 13:20 - 13:50
                 .pgmItemContent
                     .pgmItemTitle Сервис с &laquo;нуля&raquo; в большом банке: ожидания и реальность
-                    .pgmItemSubTitle Мы развиваем самый большой подписочный сервис в России &mdash; Уведомления. Когда ежедневно отправляешь 300 миллионов смс, а твоя аудитория &mdash; много миллионов человек, начинаешь смотреть на&nbsp;мир через призму масштабности. А что если ты начнешь создание абсолютно нового, при&nbsp;этом&nbsp;платного сервиса, не&nbsp;имеющего аналогов на рынке?
+                    .pgmItemSubTitle Мы развиваем самый большой подписочный сервис в&nbsp;России &mdash; Уведомления. Когда ежедневно отправляешь 300 миллионов смс, а&nbsp;твоя аудитория &mdash; много миллионов человек, начинаешь смотреть на&nbsp;мир через призму масштабности. А что если ты начнешь создание абсолютно нового, при&nbsp;этом&nbsp;платного сервиса, не&nbsp;имеющего аналогов на&nbsp;рынке?
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -197,14 +197,14 @@
                 .pgmItemTime 13:50 - 14:20
                 .pgmItemContent
                     .pgmItemTitle От Run к Change. Четыре уровня работы над продуктом
-                    .pgmItemSubTitle Поговорим про то, в каких случаях стоит применять продуктовый подход, а когда он не нужен. Расскажу про четыре уровня работы над продуктом и про то, что необходимо на каждом из&nbsp;этих&nbsp;уровней. Разберем, где чаще всего случаются проблемы и почему.
+                    .pgmItemSubTitle Поговорим про то, в&nbsp;каких случаях стоит применять продуктовый подход, а&nbsp;когда он не нужен. Расскажу про четыре уровня работы над продуктом и&nbsp;про то, что необходимо на&nbsp;каждом из&nbsp;этих&nbsp;уровней. Разберем, где чаще всего случаются проблемы и почему.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
                                 img(width="40" height="40" alt="Дмитрий Козлов" src="assets/spk/kozlov.png")
                             .pgmItemSpeakerName
                                 .pgmItemSpeakerFio Козлов Дмитрий
-                                .pgmItemSpeakerPos Директор по развитию, Product.Vision
+                                .pgmItemSpeakerPos Директор по&nbsp;развитию, Product.Vision
 
 
             .pgmItem
@@ -214,7 +214,7 @@
                 .pgmItemTime 14:20 - 14:45
                 .pgmItemContent
                     .pgmItemTitle Продукт с нуля. Преграды. Инсайты
-                    .pgmItemSubTitle На пути к созданию востребованного продукта &laquo;с&nbsp;нуля&raquo; команда сталкивается с&nbsp;определенными ограничениями. Среди них: сроки, выбор направления развития, нехватка ресурсов, отношения в&nbsp;команде, зависимость от других команд, внешние факторы. Какие инсайты и&nbsp;интересные кейсы команда собрала на&nbsp;пути к своей цели?
+                    .pgmItemSubTitle На пути к&nbsp;созданию востребованного продукта &laquo;с&nbsp;нуля&raquo; команда сталкивается с&nbsp;определенными ограничениями. Среди них: сроки, выбор направления развития, нехватка ресурсов, отношения в&nbsp;команде, зависимость от других команд, внешние факторы. Какие инсайты и&nbsp;интересные кейсы команда собрала на&nbsp;пути к своей цели?
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -229,7 +229,7 @@
                 .pgmItemTime 14:45 - 15:15
                 .pgmItemContent
                     .pgmItemTitle Как не терять деньги на внутренних продуктах
-                    .pgmItemSubTitle Внутренние продукты &laquo;пилят&raquo; практически все, но очень мало об&nbsp;этом говорят. Мы поговорим об&nbsp;основных вопросах, которые волнуют всех продактов внутренних продуктов и их заказчиков:<br>- Должна ли разработка внутреннего продукта отличаться от разработки внешнего?<br>- Как работать с метриками и фреймворками?<br>- Как развивать себя как PM’a внутреннего продукта?
+                    .pgmItemSubTitle Внутренние продукты &laquo;пилят&raquo; практически все, но очень мало об&nbsp;этом говорят. Мы поговорим об&nbsp;основных вопросах, которые волнуют всех продактов внутренних продуктов и&nbsp;их заказчиков:<br>- Должна ли разработка внутреннего продукта отличаться от&nbsp;разработки внешнего?<br>- Как работать с&nbsp;метриками и&nbsp;фреймворками?<br>- Как развивать себя как PM’a внутреннего продукта?
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -244,7 +244,7 @@
                 .pgmItemTime 15:15 - 15:30
                 .pgmItemContent
                     .pgmItemTitle Вендорозамещение за три месяца
-                    .pgmItemSubTitle Как быстро разработать замену сервисам Google и сократить time&#8209;to&#8209;market запуска рекламных кампаний? Возможно ли в разы увеличить конверсию в&nbsp;условиях нехватки людей и денег?
+                    .pgmItemSubTitle Как быстро разработать замену сервисам Google и&nbsp;сократить time&#8209;to&#8209;market запуска рекламных кампаний? Возможно ли в разы увеличить конверсию в&nbsp;условиях нехватки людей и&nbsp;денег?
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -272,7 +272,7 @@
                 .pgmItemTime 15:45 - 16:15
                 .pgmItemContent
                     .pgmItemTitle Измеряем — значит контролируем!
-                    .pgmItemSubTitle Метрики, как основной инструмент отсеивания показателей проекта. Как их выбирать и отслеживать.
+                    .pgmItemSubTitle Метрики, как основной инструмент отсеивания показателей проекта. Как их выбирать и&nbsp;отслеживать.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -286,8 +286,8 @@
                     include ../svg/mic.svg
                 .pgmItemTime 16:15 - 16:35
                 .pgmItemContent
-                    .pgmItemTitle Продуктовая стратегия на примере запуска страхового продукта Защита 360°
-                    .pgmItemSubTitle В своем выступлении я расскажу про опыт разработки продуктовой стратегии на&nbsp;примере создания онлайн-продукта корпоративного страхования. От идеи до&nbsp;ее&nbsp;реализации в этом случае прошло всего три месяца. Вместе с вами мы рассмотрим продуктовые метрики, зачем нужен helicopter view, поговорим про важность CustDev, генерацию гипотез, их проверку, а также про&nbsp;UX/UI&#8209;исследования.
+                    .pgmItemTitle Продуктовая стратегия на&nbsp;примере запуска страхового продукта Защита 360°
+                    .pgmItemSubTitle В своем выступлении я расскажу про опыт разработки продуктовой стратегии на&nbsp;примере создания онлайн-продукта корпоративного страхования. От идеи до&nbsp;ее&nbsp;реализации в&nbsp;этом случае прошло всего три месяца. Вместе с&nbsp;вами мы рассмотрим продуктовые метрики, зачем нужен helicopter view, поговорим про важность CustDev, генерацию гипотез, их проверку, а&nbsp;также про&nbsp;UX/UI&#8209;исследования.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -302,8 +302,8 @@
                     include ../svg/mic.svg
                 .pgmItemTime 16:35 - 17:05
                 .pgmItemContent
-                    .pgmItemTitle Пять причин, чтобы <i>не</i> исследовать
-                    .pgmItemSubTitle Работая над продуктом, команда выводит много новых фич. Когда же возникает необходимость проводить исследования, встает множество вопросов: как найти время у команды, зачем нужны исследования, если продукт работает, и&nbsp;другие. В открытом диалоге Владелец продукта и&nbsp;UX&#8209;исследователь расскажут о&nbsp;барьерах, которые возникают на пути к проведению исследований, и&nbsp;способах их&nbsp;преодоления.
+                    .pgmItemTitle Пять причин, чтобы <s><i>не</i></s> исследовать
+                    .pgmItemSubTitle Работая над продуктом, команда выводит много новых фич. Когда же возникает необходимость проводить исследования, встает множество вопросов: как найти время у&nbsp;команды, зачем нужны исследования, если продукт работает, и&nbsp;другие. В открытом диалоге Владелец продукта и&nbsp;UX&#8209;исследователь расскажут о&nbsp;барьерах, которые возникают на пути к&nbsp;проведению исследований, и&nbsp;способах их&nbsp;преодоления.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
