--- a/views/elems/spk.pug
+++ b/views/elems/spk.pug
@@ -29,7 +29,7 @@
                         .spkPhotoWr
                             img(src="assets/spk/boriskov.png")
                     .spkFio Борисков Никита
-                    .spkPos Владелец продукта, Уведомления, Сбербанк Онлайн, Сбер
+                    .spkPos Владелец продукта, Уведомления, Сбербанк&nbsp;Онлайн, Сбер
 
                 .spkItem
                     .spkPhoto
