--- a/views/elems/pgm.pug
+++ b/views/elems/pgm.pug
@@ -188,7 +188,7 @@
                                 img(width="40" height="40" src="assets/spk/boriskov.png")
                             .pgmItemSpeakerName
                                 .pgmItemSpeakerFio Борисков Никита
-                                .pgmItemSpeakerPos Владелец продукта, Уведомления, Сбербанк Онлайн, Сбер
+                                .pgmItemSpeakerPos Владелец продукта, Уведомления, Сбербанк&nbsp;Онлайн, Сбер
 
             .pgmItem
                 .pgmItemIco
