--- a/views/elems/pgm.pug
+++ b/views/elems/pgm.pug
@@ -26,7 +26,7 @@
                 .pgmItemTime 10:05 - 10:20
                 .pgmItemContent
                     .pgmItemTitle Диагностика для&nbsp;компании или&nbsp;продукта
-                    .pgmItemSubTitle Просто о сложном. Найти точку приложения усилий, чтобы фантомные боли в бизнесе прекратились. Если вы еще не начали революцию в своей компании и продукте, это может помочь и вам избежать ошибок.
+                    .pgmItemSubTitle Просто о сложном. Найти точку приложения усилий, чтобы фантомные боли в&nbsp;бизнесе прекратились. Если вы еще не начали революцию в&nbsp;своей компании и&nbsp;продукте, это может помочь и&nbsp;вам избежать ошибок.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -85,7 +85,7 @@
                     include ../svg/mic.svg
                 .pgmItemTime 11:15 - 11:45
                 .pgmItemContent
-                    .pgmItemTitle Клиентские сегменты: опыт Сбера в адаптации продуктов и&nbsp;каналов
+                    .pgmItemTitle Клиентские сегменты: опыт Сбера в&nbsp;адаптации продуктов и&nbsp;каналов
                     .pgmItemSubTitle Как делать сервисы, которые понравятся 105&nbsp;миллионам клиентов: молодежи и&nbsp;пенсионерам, детям и&nbsp;их&nbsp;родителям, иностранцам, бюджетникам, людям с&nbsp;инвалидностью и&nbsp;другим? Расскажем, как Сбер подходит к&nbsp;сегментации розничных клиентов, и&nbsp;разберем, как&nbsp;адаптировать сервис под&nbsp;клиента на&nbsp;примере особенного сегмента&nbsp;&ndash;&nbsp;людей с&nbsp;инвалидностью.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
@@ -136,8 +136,8 @@
                     include ../svg/mic.svg
                 .pgmItemTime 12:10 - 12:35
                 .pgmItemContent
-                    .pgmItemTitle Как в&nbsp;рутине задач находить время на Disrupt
-                    .pgmItemSubTitle На живом примере продукта trade-in недвижимости я расскажу, что помогает команде Домклика быстро проверять гипотезы и не бояться отвергать их, а&nbsp;также поделюсь секретами, как&nbsp;придумывать новые, подрывные решения и находить время на Disrupt.
+                    .pgmItemTitle Как в&nbsp;рутине задач находить время на&nbsp;Disrupt
+                    .pgmItemSubTitle На живом примере продукта trade-in недвижимости я расскажу, что помогает команде Домклика быстро проверять гипотезы и&nbsp;не бояться отвергать их, а&nbsp;также поделюсь секретами, как&nbsp;придумывать новые, подрывные решения и&nbsp;находить время на&nbsp;Disrupt.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -151,7 +151,7 @@
                     include ../svg/mic.svg
                 .pgmItemTime 12:35 - 13:05
                 .pgmItemContent
-                    .pgmItemTitle Как разработать успешную стратегию, которая поможет развивать продукт. И которую будет не&nbsp;стыдно показать =)
+                    .pgmItemTitle Как разработать успешную стратегию, которая поможет развивать продукт. И&nbsp;которую будет не&nbsp;стыдно показать =)
                     .pgmItemSubTitle В своем докладе я&nbsp;расскажу, как&nbsp;построить успешную стратегию развития продукта, какие метрики использовать, как декомпозировать ее до&nbsp;задач и, самое главное, &mdash; как на&nbsp;нее влияет&nbsp;клиент.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
@@ -180,7 +180,7 @@
 
                 .pgmItemTime 13:20 - 13:50
                 .pgmItemContent
-                    .pgmItemTitle Сервис с &laquo;нуля&raquo; в большом банке: ожидания и реальность
+                    .pgmItemTitle Сервис с &laquo;нуля&raquo; в&nbsp;большом банке: ожидания и&nbsp;реальность
                     .pgmItemSubTitle Мы развиваем самый большой подписочный сервис в&nbsp;России &mdash; Уведомления. Когда ежедневно отправляешь 300 миллионов смс, а&nbsp;твоя аудитория &mdash; много миллионов человек, начинаешь смотреть на&nbsp;мир через призму масштабности. А что если ты начнешь создание абсолютно нового, при&nbsp;этом&nbsp;платного сервиса, не&nbsp;имеющего аналогов на&nbsp;рынке?
                     .pgmItemSpeakers
                         .pgmItemSpeaker
@@ -196,8 +196,8 @@
 
                 .pgmItemTime 13:50 - 14:20
                 .pgmItemContent
-                    .pgmItemTitle От Run к Change. Четыре уровня работы над продуктом
-                    .pgmItemSubTitle Поговорим про то, в&nbsp;каких случаях стоит применять продуктовый подход, а&nbsp;когда он не нужен. Расскажу про четыре уровня работы над продуктом и&nbsp;про то, что необходимо на&nbsp;каждом из&nbsp;этих&nbsp;уровней. Разберем, где чаще всего случаются проблемы и почему.
+                    .pgmItemTitle От Run к Change. Четыре уровня работы над&nbsp;продуктом
+                    .pgmItemSubTitle Поговорим про то, в&nbsp;каких случаях стоит применять продуктовый подход, а&nbsp;когда он не нужен. Расскажу про четыре уровня работы над&nbsp;продуктом и&nbsp;про то, что необходимо на&nbsp;каждом из&nbsp;этих&nbsp;уровней. Разберем, где чаще всего случаются проблемы и&nbsp;почему.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -228,7 +228,7 @@
                     include ../svg/mic.svg
                 .pgmItemTime 14:45 - 15:15
                 .pgmItemContent
-                    .pgmItemTitle Как не терять деньги на внутренних продуктах
+                    .pgmItemTitle Как не терять деньги на&nbsp;внутренних продуктах
                     .pgmItemSubTitle Внутренние продукты &laquo;пилят&raquo; практически все, но очень мало об&nbsp;этом говорят. Мы поговорим об&nbsp;основных вопросах, которые волнуют всех продактов внутренних продуктов и&nbsp;их заказчиков:<br>- Должна ли разработка внутреннего продукта отличаться от&nbsp;разработки внешнего?<br>- Как работать с&nbsp;метриками и&nbsp;фреймворками?<br>- Как развивать себя как PM’a внутреннего продукта?
                     .pgmItemSpeakers
                         .pgmItemSpeaker
@@ -244,7 +244,7 @@
                 .pgmItemTime 15:15 - 15:30
                 .pgmItemContent
                     .pgmItemTitle Вендорозамещение за три месяца
-                    .pgmItemSubTitle Как быстро разработать замену сервисам Google и&nbsp;сократить time&#8209;to&#8209;market запуска рекламных кампаний? Возможно ли в разы увеличить конверсию в&nbsp;условиях нехватки людей и&nbsp;денег?
+                    .pgmItemSubTitle Как быстро разработать замену сервисам Google и&nbsp;сократить time&#8209;to&#8209;market запуска рекламных кампаний? Возможно ли в&nbsp;разы увеличить конверсию в&nbsp;условиях нехватки людей и&nbsp;денег?
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -279,7 +279,7 @@
                                 img(width="40" height="40" src="assets/spk/pustovit.png")
                             .pgmItemSpeakerName
                                 .pgmItemSpeakerFio Пустовит Александр
-                                .pgmItemSpeakerPos Партнер в Product.Vision
+                                .pgmItemSpeakerPos Партнер в&nbsp;Product.Vision
 
             .pgmItem
                 .pgmItemIco
@@ -303,7 +303,7 @@
                 .pgmItemTime 16:35 - 17:05
                 .pgmItemContent
                     .pgmItemTitle Пять причин, чтобы <s><i>не</i></s> исследовать
-                    .pgmItemSubTitle Работая над продуктом, команда выводит много новых фич. Когда же возникает необходимость проводить исследования, встает множество вопросов: как найти время у&nbsp;команды, зачем нужны исследования, если продукт работает, и&nbsp;другие. В открытом диалоге Владелец продукта и&nbsp;UX&#8209;исследователь расскажут о&nbsp;барьерах, которые возникают на пути к&nbsp;проведению исследований, и&nbsp;способах их&nbsp;преодоления.
+                    .pgmItemSubTitle Работая над&nbsp;продуктом, команда выводит много новых фич. Когда же возникает необходимость проводить исследования, встает множество вопросов: как найти время у&nbsp;команды, зачем нужны исследования, если продукт работает, и&nbsp;другие. В&nbsp;открытом диалоге Владелец продукта и&nbsp;UX&#8209;исследователь расскажут о&nbsp;барьерах, которые возникают на&nbsp;пути к&nbsp;проведению исследований, и&nbsp;способах их&nbsp;преодоления.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
