--- a/views/elems/pgm.pug
+++ b/views/elems/pgm.pug
@@ -272,7 +272,7 @@
                 .pgmItemTime 15:45 - 16:15
                 .pgmItemContent
                     .pgmItemTitle Измеряем — значит контролируем!
-                    .pgmItemSubTitle Метрики, как основной инструмент отсеивания показателей проекта. Как их выбирать и&nbsp;отслеживать.
+                    .pgmItemSubTitle Метрики как основной инструмент отсеивания показателей проекта. Как их выбирать и&nbsp;отслеживать.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
