--- a/views/elems/pgm.pug
+++ b/views/elems/pgm.pug
@@ -180,7 +180,7 @@
 
                 .pgmItemTime 13:20 - 13:50
                 .pgmItemContent
-                    .pgmItemTitle Сервис с &laquo;нуля&raquo; в&nbsp;большом банке: ожидания и&nbsp;реальность
+                    .pgmItemTitle Сервис с&nbsp;нуля в&nbsp;большом банке: ожидания и&nbsp;реальность
                     .pgmItemSubTitle Мы развиваем самый большой подписочный сервис в&nbsp;России &mdash; Уведомления. Когда ежедневно отправляешь 300 миллионов смс, а&nbsp;твоя аудитория &mdash; много миллионов человек, начинаешь смотреть на&nbsp;мир через призму масштабности. А что если ты начнешь создание абсолютно нового, при&nbsp;этом&nbsp;платного сервиса, не&nbsp;имеющего аналогов на&nbsp;рынке?
                     .pgmItemSpeakers
                         .pgmItemSpeaker
@@ -213,8 +213,8 @@
 
                 .pgmItemTime 14:20 - 14:45
                 .pgmItemContent
-                    .pgmItemTitle Продукт с нуля. Преграды. Инсайты
-                    .pgmItemSubTitle На пути к&nbsp;созданию востребованного продукта &laquo;с&nbsp;нуля&raquo; команда сталкивается с&nbsp;определенными ограничениями. Среди них: сроки, выбор направления развития, нехватка ресурсов, отношения в&nbsp;команде, зависимость от других команд, внешние факторы. Какие инсайты и&nbsp;интересные кейсы команда собрала на&nbsp;пути к своей цели?
+                    .pgmItemTitle Продукт с&nbsp;нуля. Преграды. Инсайты
+                    .pgmItemSubTitle На пути к&nbsp;созданию востребованного продукта с&nbsp;нуля команда сталкивается с&nbsp;определенными ограничениями. Среди них: сроки, выбор направления развития, нехватка ресурсов, отношения в&nbsp;команде, зависимость от других команд, внешние факторы. Какие инсайты и&nbsp;интересные кейсы команда собрала на&nbsp;пути к своей цели?
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
