Описание доклада Пинчук

--- a/views/elems/pgm.pug
+++ b/views/elems/pgm.pug
@@ -121,7 +121,7 @@
                 .pgmItemTime 11:45 - 12:10
                 .pgmItemContent
                     .pgmItemTitle От идеи до&nbsp;масштабного запуска и&nbsp;выручки за&nbsp;один&nbsp;год
-                    //.pgmItemSubTitle В этом выступлении я расскажу, как мы:<br>- За один год построили полноценную CV&#8209;платформу;<br>- Выпустили линейку из трех продуктов, на&nbsp;которых сразу же начали зарабатывать;<br>- Нашли свою нишу, когда на рынке уже&nbsp;были конкуренты с 10-летним опытом;<br>- Создавали идеи продуктов и проверяли гипотезы с нулевым вложением в&nbsp;разработку
+                    .pgmItemSubTitle В этом выступлении я расскажу, как мы:<br>- За один год построили полноценную CV&#8209;платформу;<br>- Выпустили линейку из трех продуктов, на&nbsp;которых сразу же начали зарабатывать;<br>- Нашли свою нишу, когда на рынке уже&nbsp;были конкуренты с 10-летним опытом;<br>- Создавали идеи продуктов и проверяли гипотезы с нулевым вложением в&nbsp;разработку
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
