Замена описания доклада

--- a/views/elems/pgm.pug
+++ b/views/elems/pgm.pug
@@ -303,7 +303,7 @@
                 .pgmItemTime 16:35 - 17:05
                 .pgmItemContent
                     .pgmItemTitle Пять причин, чтобы <s><i>не</i></s> исследовать
-                    .pgmItemSubTitle Работая над&nbsp;продуктом, команда выводит много новых фич. Когда же возникает необходимость проводить исследования, встает множество вопросов: как найти время у&nbsp;команды, зачем нужны исследования, если продукт работает, и&nbsp;другие. В&nbsp;открытом диалоге Владелец продукта и&nbsp;UX&#8209;исследователь расскажут о&nbsp;барьерах, которые возникают на&nbsp;пути к&nbsp;проведению исследований, и&nbsp;способах их&nbsp;преодоления.
+                    .pgmItemSubTitle В&nbsp;своем докладе мы расскажем, как команды могут начать проводить исследования, даже если никогда этого не&nbsp;делали раньше.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
