--- a/views/elems/pgm.pug
+++ b/views/elems/pgm.pug
@@ -286,7 +286,7 @@
                     include ../svg/mic.svg
                 .pgmItemTime 16:15 - 16:35
                 .pgmItemContent
-                    .pgmItemTitle Продуктовая стратегия на&nbsp;примере запуска страхового продукта Защита 360°
+                    .pgmItemTitle Продуктовая стратегия на&nbsp;примере запуска страхового продукта «Защита&nbsp;360°»
                     .pgmItemSubTitle В своем выступлении я расскажу про опыт разработки продуктовой стратегии на&nbsp;примере создания онлайн-продукта корпоративного страхования. От идеи до&nbsp;ее&nbsp;реализации в&nbsp;этом случае прошло всего три месяца. Вместе с&nbsp;вами мы рассмотрим продуктовые метрики, зачем нужен helicopter view, поговорим про важность CustDev, генерацию гипотез, их проверку, а&nbsp;также про&nbsp;UX/UI&#8209;исследования.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
