--- a/html/assets/style.css
+++ b/html/assets/style.css
@@ -112,10 +112,10 @@ body {
     font-size: var(--fs18);
     line-height: var(--fs24);
 
-    background-color: black;
+    background-color: #0A0E16;
     width: 100%;
     overflow-x: hidden;
-    background-image: url(bg.png);
+
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
@@ -176,12 +176,14 @@ body {
     top: 1200px;
     left: 0;
     z-index: 1;
+    display: none;
 }
 .decor5 {
     position: absolute;
     top: 3000px;
     right: 0;
     z-index: 1;
+    display: none;
 }
 .decor6 {
     position: absolute;
